fix: Text not truncate for room preview

--- a/src/common/index.scss
+++ b/src/common/index.scss
@@ -406,10 +406,8 @@
         left: 0;
         height: 100%;
         width: 100%;
-        border-radius: $border-radius;
-        background-color: $light;
+        background-color: $white;
         background-repeat: no-repeat;
-        background-position: center;
         overflow: hidden;
 
         &.border-0 {
